--- a/index.html
+++ b/index.html
@@ -11,15 +11,16 @@
 
 <body onload="initGame()">
     <h1>Minesweeper</h1>
-    <div class="timer"></div>
+    <div class="timer">Timer 0:0</div>
     <div class="modal"></div>
-    <button class="smiley" onclick="initGame();">😀</button>
+    <button class="smiley" onclick="restart();">😀</button>
     <div class="difficulty">
-    <button class="Easy2" onclick="changeDifficulty(4)">Easy</button>
+    <button class="Easy" onclick="changeDifficulty(4)">Easy</button>
     <button class="Medium" onclick="changeDifficulty(8)">Medium</button>
     <button class="Hard" onclick="changeDifficulty(12)">Hard</button>
     </div>
     <div class="board"></div>
+    <div class="game-over"></div>
     <script src="util.js"></script>
     <script src="app.js"></script>
 </body>
